<resources>
    <string name="app_name">Tournesia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="preferense_file_key">tournesia_preferences</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="add">Add</string>
    <string name="nama_tempat">Nama Tempat</string>
    <string name="kategori">Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="alamat">Alamat</string>
    <string name="provinsi">Provinsi</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="image_post">Image Post</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="loading">Loading...</string>
    <string name="sampaikan_pendapat_anda">Sampaikan pendapat anda</string>
    <string name="tulis_ulasan">Tulis Ulasan</string>
    <string name="rating_dan_ulasan">Rating dan Ulasan</string>
    <string name="diupload_oleh">Diupload Oleh</string>
    <string name="lokasi">Lokasi</string>
    <string name="region">Region</string>
    <string name="_4_5_10_ulasan">4.5 - 10 ulasan</string>
    <string name="register">REGISTER</string>
    <string name="atau">Atau</string>
    <string name="login">LOGIN</string>
    <string name="pencarian">Pencarian</string>
    <string name="_0_0">0.0</string>
    <string-array name="arr_media">
        <item>Kamera</item>
        <item>Galeri</item>
    </string-array>
</resources>
